--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,23 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../query.css">
 
     <title>Kluziště v centru | Veselí nad Moravou</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../images/favicon-ice-skates.png" type="image/x-icon">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="">provozní doba</a></li>
-                <li><a href="">ceník</a></li>
-                <li><a href="">rozpis ledu a rezervace</a></li>
-                <li><a href="">webkamera</a></li>
-            </ul>
-        </nav>
+        <div class="navbar_container box_glass_effect">
+            <div class="header_logo">
+                <a href="#"><img src="../images/kluziste_v_centru_vetsi_logo.png" alt=""></a>
+            </div>
+            <div class="ham_menu hamMenuIcon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="mainNavMenu">
+                <ul>
+                    <li><a href="">ceník</a></li>
+                    <li><a href="">webkamera</a></li>
+                    <li><a href="">rozpis ledu/provozní doba</a></li>
+                    <li><a href="">rezervace</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
 
@@ -29,5 +40,6 @@
     <footer>
 
     </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
