--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="../query.css">
 
     <title>Kluziště v centru | Veselí nad Moravou</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+
     <link rel="shortcut icon" href="../images/favicon-ice-skates.png" type="image/x-icon">
 </head>
 <body>
