--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/9e0a62895a.js" crossorigin="anonymous"></script>
+
     <link rel="shortcut icon" href="../images/favicon-ice-skates.png" type="image/x-icon">
 </head>
 <body>
@@ -40,7 +42,31 @@
 
     </main>
     <footer>
-
+        <div class="footer_container box_glass_effect">
+            <section class="text_information">
+                <a href="">Provozní řád</a>
+                <a href="">Město Veselí nad Moravou</a>
+                <a href="">Naši partneři</a>
+                <div class="tel_contanct">
+                    <img src="../images/phone_icon.png" alt="">
+                    <a href="tel:+450 254 896 547">+450 254 896 547</a>
+                </div>
+                <div class="email_contact">
+                    <img src="../images/email_icon.png" alt="">
+                    <a href="mailto:kluziste@veselinadmoravou.cz">kluziste@veselinadmoravou.cz</a>
+                </div>
+                <div class="social_media_contact">
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </section>
+            <section class="map_information">
+                <!-- mapa -->
+            </section>
+            <section class="copyright_information">
+                <p>Copyright © 2025 Kluziště Veselí nad Moravou. All Rights Reserved.</p>
+            </section>
+        </div>
     </footer>
     <script src="../JS/script.js"></script>
 </body>
