footer-není hotovo ještě

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/9e0a62895a.js" crossorigin="anonymous"></script>
 
@@ -39,29 +39,41 @@
         </div>
     </header>
     <main>
-
+        
     </main>
     <footer>
         <div class="footer_container box_glass_effect">
             <section class="text_information">
-                <a href="">Provozní řád</a>
-                <a href="">Město Veselí nad Moravou</a>
-                <a href="">Naši partneři</a>
-                <div class="tel_contanct">
-                    <img src="../images/phone_icon.png" alt="">
-                    <a href="tel:+450 254 896 547">+450 254 896 547</a>
-                </div>
-                <div class="email_contact">
-                    <img src="../images/email_icon.png" alt="">
-                    <a href="mailto:kluziste@veselinadmoravou.cz">kluziste@veselinadmoravou.cz</a>
-                </div>
-                <div class="social_media_contact">
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                </div>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="">Provozní řád</a>
+                        </li>
+                        <li>    
+                            <a href="">Město Veselí nad Moravou</a>
+                        </li>
+                        <li>
+                            <a href="">Naši partneři</a>
+                        </li>
+                        <li>
+                            <div class="tel_contanct contact">
+                                <i class="fa-solid fa-phone"></i>
+                                <a href="tel:+450 254 896 547">+450 254 896 547</a>
+                            </div>
+                            <div class="email_contact contact">
+                                <i class="fa-solid fa-envelope"></i>
+                                <a href="mailto:kluziste@veselinadmoravou.cz">kluziste@veselinadmoravou.cz</a>
+                            </div>
+                        </li>
+                        <li>
+                            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        </li>
+                    </ul>
+                </nav>
             </section>
             <section class="map_information">
-                <!-- mapa -->
+                <iframe style="border:none" src="https://mapy.com/s/nufagekudu" width="500" height="333" frameborder="0"></iframe>
             </section>
             <section class="copyright_information">
                 <p>Copyright © 2025 Kluziště Veselí nad Moravou. All Rights Reserved.</p>
