footer done - mobilní header má problém

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -43,9 +43,12 @@
     </main>
     <footer>
         <div class="footer_container box_glass_effect">
-            <section class="text_information">
-                <nav>
+            <section class="text_map_section">
+                <nav class="left_section section">
                     <ul>
+                        <li>
+                            <a href=""><img src="../images/kluziste_v_centru_vetsi_logo.png" alt=""></a>
+                        </li>
                         <li>
                             <a href="">Provozní řád</a>
                         </li>
@@ -55,27 +58,28 @@
                         <li>
                             <a href="">Naši partneři</a>
                         </li>
-                        <li>
-                            <div class="tel_contanct contact">
-                                <i class="fa-solid fa-phone"></i>
-                                <a href="tel:+450 254 896 547">+450 254 896 547</a>
-                            </div>
-                            <div class="email_contact contact">
-                                <i class="fa-solid fa-envelope"></i>
-                                <a href="mailto:kluziste@veselinadmoravou.cz">kluziste@veselinadmoravou.cz</a>
-                            </div>
-                        </li>
-                        <li>
-                            <a href=""><i class="fa-brands fa-instagram"></i></a>
-                            <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        </li>
+                        
                     </ul>
                 </nav>
+                <div class="middle_section section">
+                    <div class="tel_contanct contact">
+                        <i class="fa-solid fa-phone"></i>
+                        <a href="tel:+450254896547">+450 254 896 547</a>
+                    </div>
+                    <div class="email_contact contact">
+                        <i class="fa-solid fa-envelope"></i>
+                        <a href="mailto:kluziste@veselinadmoravou.cz">kluziste@veselinadmoravou.cz</a>
+                    </div>
+                    <div class="social_media_contact">
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    </div>       
+                </div>
+                <div class="right_section section">
+                    <iframe style="border:none" src="https://mapy.com/s/nufagekudu" height="333" frameborder="0"></iframe>
+                </div>
             </section>
-            <section class="map_information">
-                <iframe style="border:none" src="https://mapy.com/s/nufagekudu" width="500" height="333" frameborder="0"></iframe>
-            </section>
-            <section class="copyright_information">
+            <section class="copyright_section">
                 <p>Copyright © 2025 Kluziště Veselí nad Moravou. All Rights Reserved.</p>
             </section>
         </div>
